# editor

./: .gitignore  Cargo.toml  README.md  vkvia.html
config/: preferences.xiconfig
eddy/: Cargo.toml
eddy/rope/: Cargo.toml
eddy/rope/src/: delta.rs  diff.rs  engine.rs  interval.rs  lib.rs  multiset.rs  rope.rs  tree.rs
eddy/src/: actions.rs  annotations.rs  backspace.rs  client.rs  edit_ops.rs  editor.rs  errors.rs  event_context.rs  file.rs  index_set.rs  layers.rs  lib.rs  line_cache.rs  line_offset.rs  linewrap.rs  movement.rs  selection.rs  styles.rs  unicode.rs  view.rs  width_cache.rs  words.rs
render/: Cargo.toml
render/shaders/: text_vertex.glsl
render/src/: abstract_renderer.rs  colour.rs  core.rs  lib.rs  primitive.rs  text.rs  uniform.rs
render/src/core/: queue_indices.rs
render/src/primitive/: shaders.rs
render/src/text/: font.rs  shaders.rs  text_group.rs  unicode.rs
rpc/: Cargo.toml
rpc/src/: action.rs  annotations.rs  config.rs  find.rs  lib.rs  mode.rs  motion.rs  plugins.rs  quantity.rs  view.rs
shaders/: frag.glsl  primitive_frag.glsl  primitive_vertex.glsl  shader.vert  tess_ctrl.glsl  tess_eval.glsl  text_frag.glsl  text_vertex.glsl  vert.glsl
src/: editor.rs  events.rs  linecache.rs  main.rs  render.rs  unicode.rs
src/editor/: action.rs  commands.rs  editor_rpc.rs  font.rs  linecache.rs  motion.rs  plugins.rs  rpc.rs  state.rs  ui.rs  view_commands.rs  view_resources.rs  xi_thread.rs
src/editor/rpc/: annotations.rs  commands.rs  config.rs  theme.rs
src/editor/ui/: colour.rs  editable_text.rs  find_replace.rs  primitive.rs  status.rs  text.rs  view.rs  widget.rs
src/events/: binding.rs  mapper_winit.rs  state.rs
src/render/: buffers.rs  camera.rs  core.rs  primitive.rs  queue_indices.rs  shaders.rs  text.rs  ui.rs  uniform.rs  uniform_buffer_object.rs
src/render/primitive/: shaders.rs
src/render/text/: shaders.rs
src/render/ui/: text.rs  view.rs  widget.rs
ui/: Cargo.toml
ui/src/: lib.rs  primitive.rs  text.rs  tree.rs  view.rs  widget.rs
ui/src/view/: gutter.rs  resources.rs  settings.rs  status.rs
