[package]
name = "editor"
version = "0.1.0"
authors = ["simon"]
edition = "2018"

[dependencies]
render = { path = "./render" }
eddy = { path = "./eddy" }
ui = { path = "./ui" }
dirs = "3.0"

[dependencies.winit]
version = "0.25"
features = ["wayland"]

[workspace]
members = ["render", "eddy", "ui"]
