[package]
name = "editor"
version = "0.1.0"
authors = ["simon"]
edition = "2021"

[dependencies]
render = { path = "./render" }
eddy = { path = "./eddy" }
ui = { path = "./ui" }
dirs = "4.0"
puffin = "0.12"
puffin_http = "0.9"

[dependencies.winit]
version = "0.25"
features = ["wayland"]

[workspace]
members = ["render", "eddy", "ui"]
