[package]
name = "eddy"
version = "0.1.0"
edition = "2018"

[dependencies]
rope = { path = "./rope" }
unicode-segmentation = "1.3.0"
futures = { version = "^0.3", features = ["std"] }

[dependencies.flume]
version = "0.10"
features = ["default"]

[dependencies.syntect]
version = "3.2"
default-features = false
features = ["assets","dump-load-rs","dump-create"]

