[package]
name = "eddy"
description = "xi-editor without the rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
rope = { path = "./rope" }
unicode-segmentation = "1.8"
futures = { version = "^0.3", features = ["std"] }

[dependencies.flume]
version = "0.10"
features = ["default"]

[dependencies.syntect]
version = "4.6"
default-features = false
features = ["assets","dump-load-rs","dump-create"]

