[package]
name = "render"
version = "0.1.0"
authors = ["Simon Willshire"]

[lib]

[dependencies]
vulkano = "0.25"
vulkano-win = "0.25"
vulkano-shaders = "0.25"

[dependencies.winit]
version = "0.25"
features=["wayland"]
default-features = false

[dependencies.glyph_brush]
version = "0.7"
default-features = false
