[package]
name = "render"
version = "0.1.0"
authors = ["Simon Willshire"]
edition = "2021"

[dependencies]
vulkano = "0.27"
vulkano-win = "0.27"
vulkano-shaders = "0.27"

[dependencies.winit]
version = "0.25"
features=["wayland"]
default-features = false

[dependencies.glyph_brush]
version = "0.7"
default-features = false
