[package]
name = "rpc"
version = "0.0.1"
authors = ["Simon Willshire"]

[lib]

[dependencies]
serde = "1.0.118"
serde_json = "1.0.60"

[dependencies.xi-core-lib]
path = "../xi-editor/rust/core-lib"
default-features = false

[dependencies.xi-rpc]
path = "../xi-editor/rust/rpc"
default-features = false
