[package]
authors = ["Raph Levien <raph@google.com>"]
description = "A generic rope data structure built on top of B-Trees."
license = "Apache-2.0"
name = "rope"
repository = "https://github.com/google/xi-editor"
version = "0.3.0"
edition = '2018'

[dependencies]
bytecount = "0.6"
memchr = "2.0"
unicode-segmentation = "1.2"
regex = "1.0"

[features]
default = []
